# accepts.py

./: .edit  .travis.yml  README.md  requirements.txt  setup.cfg
accepts/: __init__.py
tests/accepts/examples/: @accepts(int)
