[metadata]
name = accepts
version = 1.0.3
url = https://github.com/looking-for-a-job/accepts.py
classifiers = file: .tmp/pypi.org/classifiers.txt
description = @accepts decorator to check arguments types
long_description = file: .tmp/pypi.org/README.md
long_description_content_type = text/markdown
keywords = type decorator

[options]
install_requires = 
	objectname
	public
	setuptools
packages = 
	accepts
