[metadata]
name = accepts
version = 1.0.4
url = https://github.com/looking-for-a-job/accepts.py
classifiers = file: classifiers.txt
description = @accepts decorator to check arguments types
long_description = file: README.md
long_description_content_type = text/markdown
keywords = type decorator

[options]
packages = 
	accepts
