[metadata]
name = accepts
version = 2019.02.21
url = https://github.com/looking-for-a-job/accepts.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
keywords = type decorator

[options]
install_requires = 
	public
	setuptools
packages = 
	accepts
